<resources>
    <string name="app_name">QuizApp</string>
    <string name="app_title_text">SIT305 Quiz App</string>
    <string name="name_prompt_text">Enter your name: </string>
    <string name="name_input_hint" />
    <string name="start_button_text">Start</string>
    <string name="welcome_message">Welcome</string>
    <string name="question_number">1/5</string>
    <string name="question_title">Android Question Title</string>
    <string name="question_text">Question details go here</string>
    <string name="quiz_button_transition_text"> Submit </string>
    <string name="nameIntentData">name</string>
    <string name="scoreIntentData">score</string>
    <string name="final_screen_text">Congratulations your name!</string>
    <string name="score_label">YOUR SCORE:</string>
    <string name="score_value"> 4/5 </string>
    <string name="take_new_quiz_button_text"> Take New Quiz </string>
    <string name="finish_button_text">Finish</string>

</resources>