<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary99"
    tools:context=".QuizActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/progressButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeText"
            android:textColor="@color/dark_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_message"
            android:textStyle="bold"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/questionsTracker"
                android:textColor="@color/dark_grey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/question_number"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/quiz_progress_bar"
                app:strokeColor="@color/dark_grey"
                app:strokeWidth="2dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:clickable="false"
                android:indeterminate="false"
                android:max="5"
                android:progress="2"
                android:progressBackgroundTint="@color/light_grey"
                android:progressBackgroundTintMode="src_in"
                android:progressDrawable="@android:drawable/progress_horizontal"
                android:progressTint="@color/mid_grey"
                android:progressTintMode="src_in" />

        </LinearLayout>

        <TextView
            android:id="@+id/questionTitle"
            android:textColor="@color/dark_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/question_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/question_text" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp">

            <LinearLayout
                android:id="@+id/answerButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </ScrollView>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/progressButton"
        android:textColor="@color/dark_grey"
        android:backgroundTint="@color/light_grey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/quiz_button_transition_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/dark_grey"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>